--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,13 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/text"
-        android:text="First Page"
         android:layout_width="229dp"
         android:layout_height="70dp"
-        android:textSize="50dp"
-        android:textColor="@color/black"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"/>
+        android:layout_marginTop="150dp"
+        android:text="First Page"
+        android:textColor="@color/black"
+        android:textSize="50dp" />
 
 
     <com.google.android.material.button.MaterialButton
@@ -62,20 +62,40 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/stable"
-        android:text="stable:"
         android:layout_width="200dp"
         android:layout_height="30dp"
-        android:textSize="20dp"
-        android:textColor="@color/black"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/charge"
-        android:layout_marginTop="10dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="stable:"
+        android:textColor="@color/black"
+        android:textSize="20dp" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/lin"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/stable"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal">
+
+
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:hint="Enter battery percent"
+            android:id="@+id/batteryLevel"
+            ></EditText>
+
+
+       </androidx.appcompat.widget.LinearLayoutCompat>
 
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/first"
         android:layout_centerInParent="true"
-        android:layout_below="@id/stable"
+        android:layout_below="@id/lin"
         android:layout_marginTop="10dp"
         app:backgroundTint="@color/blue"
         android:layout_width="80dp"
